Fix spinner not showing issue

--- a/source/styles.css
+++ b/source/styles.css
@@ -182,6 +182,7 @@ button {
   justify-content: center;
   align-items: center;
   gap: 64px;
+  top: 0;
 }
 .logo-section {
   position: relative;
